# wc-beacon

./: Cargo.toml  README.md  build.rs  gen-iv-character-map.txt  gen-iv-distribution-structure.md  species.txt
scripts/: prepare-wifi.sh  unmanage.sh
src/: beacon.rs  decrypt.rs  error.rs  info.rs  main.rs  pcd.rs  pokestr.rs  species.rs
utf16/: Cargo.toml
utf16/src/: lib.rs
