[package]
name = "wc-beacon"
version = "0.1.0"
edition = "2021"
authors = ["Eiskasten"]
description = "Pokemon Gen IV Wondercard distribution and decryption utility"
license = "GPL-3.0-only"

[dependencies]
pcap = "1.1.0"
crc = "3.0.1"
rc4 = "0.1.0"
clap = { version = "4.3.23", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
